# mcp-server-falkordb

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
evals/: README.md  falkordb.xml  seed_eval_data.py
src/mcp_server_falkordb/: __init__.py  __main__.py  client.py  formatters.py  server.py  validators.py
tests/: conftest.py  test_graph_delete.py  test_graph_describe.py  test_graph_explore.py  test_graph_list.py  test_graph_mutate.py  test_graph_query.py  test_tool_error_paths.py  test_validators.py
tests/unit/: test_formatters.py  test_models.py
