[project]
name = "mcp-server-falkordb"
version = "0.1.0"
description = "MCP server for FalkorDB — exposes graph query and management tools to LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Rob Barrie" }]
keywords = ["mcp", "falkordb", "graph-database", "cypher", "anthropic", "claude", "llm", "knowledge-graph", "model-context-protocol", "redis-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "falkordb>=1.6.0",
    "mcp[cli]>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/rbarrielabrystech/mcp-server-falkordb"
Repository = "https://github.com/rbarrielabrystech/mcp-server-falkordb"
Issues = "https://github.com/rbarrielabrystech/mcp-server-falkordb/issues"

[project.scripts]
mcp-server-falkordb = "mcp_server_falkordb.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_server_falkordb/",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_falkordb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Some third-party stubs (falkordb, mcp) are incomplete; suppress spurious unused-ignore noise
warn_unused_ignores = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
